Postgres Db implementation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=spring-dental-clinic
 
-spring.datasource.url=jdbc:h2:mem:dentalclinic
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/dentalclinic
+spring.datasource.username=dental
+spring.datasource.password=dental
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
